Added comments as one-to-many.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,6 +16,15 @@
     |
     <%= link_to "All Posts", posts_path %>
     |
+
+    <hr>
+    <% if flash[:notice] %>
+      <div class="alert alert-success" role="alert"><%= flash[:notice] %></div>
+    <% elsif flash[:alert] %>
+    <div class="alert alert-danger" role="alert"><%= flash[:alert] %></div>
+    <% end %>
+
+
     <%= yield %>
   </div>
 </body>
