--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -3,19 +3,61 @@
 <p>Title: <%= @post.title %></p>
 <p>Body: <%= @post.body %></p>
 
-
-<table>
-  <thead>
-    <tr>
-      <th></th>
-      <th></th>
-    </tr>
-  </thead>
-  <tbody>
+<div>
+  <table>
+    <thead>
       <tr>
-        <td><%= button_to "Edit Post", edit_post_path, method: :get %></td>
-        <td><%= button_to "Delete Post", post_path(@post), method: :delete,
-                  data: {confirm: "Do you really want to delete it?"} %></td>
+        <th></th>
+        <th></th>
       </tr>
-  </tbody>
-</table>
+    </thead>
+    <tbody>
+        <tr>
+          <td><%= button_to "Edit Post", edit_post_path, method: :get %></td>
+          <td><%= button_to "Delete Post", post_path(@post), method: :delete,
+                    data: {confirm: "Do you really want to delete it?"} %></td>
+        </tr>
+    </tbody>
+  </table>
+</div>
+
+<div>
+  <h2>New Comment</h2>
+
+    <%= form_for [@post, @comment] do |f| %>
+      <div>
+      <%= f.label :body %>
+      <%= f.text_area :body %>
+      <div>
+               <%= f.submit %>
+    <% end %>
+</div>
+
+<div>
+  <h2>All Comments (<% Comment.count %>)</h2>
+
+    <table class="table table-bordered">
+      <thead>
+        <tr>
+          <th>Body</th>
+          <th>Created On</th>
+          <th>Action</th>
+        </tr>
+      </thead>
+      <tbody>
+        <% @post.comments.each do |comment| %>
+          <tr>
+            <td><%= comment.body %></td>
+            <td><%= formatted_date(comment.created_at) %></td>
+            <td><%= button_to "Delete", post_comment_path(@post, comment),
+                method: :delete,
+                data: {confirm: "Are you sure you want to delete this post?"} %>
+            </td>
+          </tr>
+        <% end %>
+      </tbody>
+    </table>
+
+    <br>
+    <%= link_to "Add a New Post", new_post_path %>
+</div>
