--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,21 +8,15 @@
 </head>
 <body>
   <div class="container">
-    <%= link_to "Home", root_path() %>
-    |
-    <%= link_to "About", about_index_path %>
-    |
-    <%= link_to "New Post", new_post_path %>
-    |
-    <%= link_to "All Posts", posts_path %>
-    |
+    <%= render "/layouts/navbar" %>
 
     <hr>
     <% if flash[:notice] %>
       <div class="alert alert-success" role="alert"><%= flash[:notice] %></div>
     <% elsif flash[:alert] %>
-    <div class="alert alert-danger" role="alert"><%= flash[:alert] %></div>
+      <div class="alert alert-danger" role="alert"><%= flash[:alert] %></div>
     <% end %>
+
 
 
     <%= yield %>
