Added the ability for users to favourite a post.

--- a/app/views/layouts/_navbar.html
+++ b/app/views/layouts/_navbar.html
@@ -18,6 +18,9 @@
         <li><%= link_to "About", about_index_path %></li>
         <li><%= link_to "New Post", new_post_path %></li>
         <li><%= link_to "All Posts", posts_path %></li>
+        <% if session[:user_id] %>
+        <li><%= link_to 'Favorite Posts', user_favorites_path(current_user) %></li>
+        <% end %>
       </ul>
 
       <% if session[:user_id] %>
