--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,10 +1,7 @@
 <div class="container">
   <h1>The Blog</h1>
 
-  <p>current time: <%= @current_time %></p>
-
-  <h2>Database</h2>
-  <p> <%= @posts  %> </p>
+  <p>Current time: <%= @current_time %></p>
 
   <h2>All Posts (<% Post.count %>)</h2>
 
@@ -13,7 +10,7 @@
         <tr>
           <th>Title</th>
           <th>Body</th>
-          <th colspan="3">Actions</th>
+          <th>Actions</th>
         </tr>
       </thead>
       <tbody>
@@ -21,11 +18,20 @@
           <tr>
             <td><%= post.title %></td>
             <td><%= post.body %></td>
-            <td><%= button_to "View", post_path(post), method: :get %></td>
-            <td><%= button_to "Edit", edit_post_path(post), method: :get %> </td>
-            <td><%= button_to "Delete", post_path(post),
-                method: :delete,
+            <td>
+              <div style="display:inline-block">
+              <%= button_to "View", post_path(post), method: :get,
+                                                    class: "btn btn-success" %>
+              </div>
+              <div style="display:inline-block">
+              <%= button_to "Edit", edit_post_path(post), method: :get,
+                                                    class: "btn btn-warning" %>
+              </div>
+              <div style="display:inline-block">
+              <%= button_to "Delete", post_path(post), method: :delete,
+                                                    class: "btn btn-danger",
                 data: {confirm: "Are you sure you want to delete this post?"} %>
+              </div>
             </td>
           </tr>
         <% end %>
@@ -37,6 +43,6 @@
   </div>
 
   <div>
-  <%= paginate @posts, theme: 'twitter-bootstrap-3' %>
+  <%= paginate @posts_pagination, theme: 'twitter-bootstrap-3' %>
   </div>
 </div>
