--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -6,6 +6,8 @@
     <p><%= @post.title %></p>
     <h3>Body</h3>
     <p><%= @post.body %></p>
+    <h3>Tags</h3>
+    <p><%= @tag %></p>
   </div>
 
   <% if current_user.present? %>
