--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -11,6 +11,11 @@
       <h3><%= f.label :body %></h3>
       <%= f.text_area :body, :cols => 65, :rows => 10 %>
     </div>
+
+    <div>
+      <%= f.collection_check_boxes :tag_ids, Tag.all, :id, :name  %>
+    </div>
+
     <div>
       <%= f.submit "Save", class: "btn btn-primary" %>
     </div>
