--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,9 +1,12 @@
 <div class="container">
   <h1>The Blog</h1>
 
-  <h2>All Posts (<% Post.count %>)</h2>
+  <h2>All Posts</h2>
 
     <table class="table table-bordered">
+      <col style="width:20%">
+      <col style="width:60%">
+      <col style="width:20%">
       <thead>
         <tr>
           <th>Title</th>
